<resources>
    <string name="app_name">RxDOSE</string>
    <string name="Medication1">Medication 1</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="signup_login">SIGN UP</string>
    <string name="signup_suggestion"> or signup with</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_confirm_pwd_hint">Confirm password</string>

    <string name="enter_proper_email">Enter valid email</string>
    <string name="enter_proper_password">Enter valid password</string>
    <string name="enter_proper_details">Enter valid entries</string>
    <string name="acc_create_success">Successfully created your account!</string>
    <string name="passwords_not_matching">Passwords are not matching</string>

    <!--    Sing in strings-->
    <string name="sigin_in_login_text">LOGIN TO YOUR ACCOUNT</string>
    <string name="signin_login">LOGIN</string>
    <string name="Signin_signup_suggestion">Don\'t have an account?</string>
    <string name="sigin_signup_text"><u>Signup</u></string>

    <string name="weak_password">Password is weak</string>
    <string name="invalid_email">Email does not exist!Please sigup</string>
    <string name="email_registered">Email is already registered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="went_wrong">Something went wrong! Please try again later</string>

    <string name="facebook_app_id">824690311622826</string>
    <string name="fb_login_protocol_scheme">fb824690311622826</string>
    <string name="profile_info">Profile</string>
    <string name="home_info">Home</string>
    <string name="timeline_view">Timeline View</string>
    <string name="prescriptions_view">Prescriptions</string>
    <string name="medication">Medication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="empty_list_text">Tablet list is empty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RxDoz</string>
    <string name="nav_header_subtitle">Never miss a dose</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>