<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_home"
        android:title="@string/home_info" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile_info" />


        <item
            android:id="@+id/nav_medication"
            android:title="@string/medication" />

        <item
            android:id="@+id/nav_timeline"
            android:title="@string/timeline_view" />

        <item
            android:id="@+id/nav_prescription"
            android:title="@string/prescriptions_view" />

        <item
            android:id="@+id/nav_item_four"
            android:title="Today's Schedule" />

        <item
            android:id="@+id/nav_item_five"
            android:title="Past/Future Dates" />

        <item
            android:id="@+id/nav_item_six"
            android:title="For Appointment" />

        <item
            android:id="@+id/nav_item_seven"
            android:title="Settings" />

        <item
            android:id="@+id/nav_item_exit"
            android:title="Exit" />
    </group>
</menu>