<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background_style"
    tools:context="com.application.rxdose.activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background_style">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_login_btn_margin_top"
            android:background="@drawable/sign_up_button"
            android:text="@string/signup_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sign_up_login_btn_txt_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_pwd_edit_tv" />

        <EditText
            android:id="@+id/sign_up_pwd_edit_tv"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_items_margin_top"
            android:background="@drawable/rounded_edittext_states"
            android:gravity="center"
            android:hint="@string/sign_up_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/sign_up_edit_text_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edit_tv" />

        <EditText
            android:id="@+id/sign_up_confirm_pwd_edit_tv"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_items_margin_top"
            android:background="@drawable/rounded_edittext_states"
            android:gravity="center"
            android:hint="@string/sign_up_confirm_pwd_hint"
            android:padding="@dimen/sign_up_edit_text_padding"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_pwd_edit_tv" />

        <EditText
            android:id="@+id/sign_up_email_edit_tv"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:layout_marginTop="@dimen/sign_up_email_margin_top"
            android:background="@drawable/rounded_edittext_states"
            android:gravity="center"
            android:hint="@string/sign_up_email_hint"
            android:padding="@dimen/sign_up_edit_text_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_your_account_txt" />

        <LinearLayout
            android:id="@+id/icons_linear_layout"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/sign_up_start_margin_top"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_imageview"
                android:src="@drawable/rx_doze" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/lj_eye_icon" />
        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/gmail_fb_linear_layout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_signup_with">

            <Button
                android:id="@+id/gmail_signup_btn"
                android:layout_width="@dimen/gmail_fb_icon_size"
                android:layout_height="@dimen/gmail_fb_icon_size"

                android:background="@drawable/google_logo" />

            <Button
                android:id="@+id/fb_signup_btn"
                android:layout_width="@dimen/gmail_fb_icon_size"
                android:layout_height="@dimen/gmail_fb_icon_size"
                android:layout_marginStart="@dimen/gmail_fb_margin"
                android:background="@drawable/facebook_new"
                android:src="@drawable/rx_doze" />
        </LinearLayout>

        <TextView
            android:id="@+id/or_signup_with"
            android:layout_width="@dimen/sign_up_edit_text_width"
            android:layout_height="@dimen/sign_up_edit_text_height"
            android:gravity="center"
            android:text="@string/signup_suggestion"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />
        -->
        <TextView
            android:id="@+id/create_your_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_display_txt_margin_top"
            android:text="@string/create_your_account"
            android:textColor="@color/white"
            android:textSize="@dimen/sign_up_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icons_linear_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

